main/HQ-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: informix
  namespace: informix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: informix
  template:
    metadata:
      labels:
        app: informix
    spec:
      containers:
      - name: informix
        image: ibmcom/informix-developer-database:latest
        ports:
        - containerPort: 1526  # Database
        - containerPort: 27017 # REST en Mongo-compatibiliteit
        - containerPort: 8080  # InformixHQ WebUI
---
apiVersion: v1
kind: Service
metadata:
  name: informix-web
  namespace: informix
spec:
  selector:
    app: informix
  ports:
    - name: informix-hq
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
