main/deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: informix
  namespace: informix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: informix
  template:
    metadata:
      labels:
        app: informix
    spec:
      containers:
      - name: informix
        image: ibmcom/informix-developer-database:latest
        ports:
        - containerPort: 1526
        volumeMounts:
        - mountPath: /opt/ibm/data
          name: informix-storage
      volumes:
      - name: informix-storage
        persistentVolumeClaim:
          claimName: informix-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: informix
  namespace: informix
  labels:
    app: informix
spec:
  type: NodePort
  selector:
    app: informix
  ports:
      protocol: TCP
      port: 9088       # Externe poort binnen de cluster service
      targetPort: 1526 # Interne containerpoort
      nodePort: 30509  # Externe NodePort op de cluster node
